# chipers

./: Cargo.toml  README.org  video.sh
src/: cpu.rs  glscreen.rs  keyboard.rs  main.rs  memview.rs  screen.rs
src/chip8/: cpu.rs  keyboard.rs  memory.rs  mod.rs  ram.rs  screen.rs  threaded_cpu.rs
src/glscreen/: mod.rs
src/glscreen/shaders/: crt-phosphor-120.glsl  fragment-120.glsl  phosphor-trail-hunterk.glsl  vertex-120.glsl
src/shader/: crt-lottes.glsl  crt-phosphor.glsl  fragment.glsl  vertex.glsl
