[package]
name = "chipers"
version = "0.1.0"
authors = ["fmdkdd"]
edition = "2018"

[dependencies]
rand = "0.7"
docopt = "1.0"
serde = "1.0"
serde_derive = "1.0"
time = "0.1"
glium = "*"
imgui = "0.1"
imgui-glium-renderer = "0.1"
imgui-winit-support = "0.1"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
